fixed - The top parts of the overlay in mobile view are not showing. - The "hamburger" icon in the top right (in mobile view) is now not showing. - Can you make the footer section white as well? Like you did with the about section?

--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -112,6 +112,10 @@ a:focus {
     outline: 0;
 }
 
+.navbar-toggle {
+	background-color: #eee !important;
+}
+
 .navbar-custom .navbar-brand .navbar-toggle {
     padding: 4px 6px;
     font-size: 16px;
@@ -201,13 +205,13 @@ a.nav-link {
 	content: "";
 	left: 0; right: 0;
 	top: 0; bottom: 0;
+	width: 100%;
+  	height: 100%;
 }
 
 .intro .intro-body {
     display: table-cell;
     vertical-align: middle;
-    background-color: rgba(0, 0, 0, 0.6);
-
 }
 
 .intro .intro-body .brand-heading {
@@ -359,11 +363,6 @@ a.nav-link {
     line-height: 1.6em;
 }
 
-.color-swap {
-	background-color: {{ site.color.primary-dark }};
-	color: #ffffff;
-}
-
 @media(min-width:767px) {
     .content-section {
         padding-top: 100px;
@@ -435,14 +434,12 @@ ul.banner-social-buttons li {
 footer {
     padding: 50px 0;
     text-transform: uppercase;
-    color: #999999;
-    background: {{ site.color.primary-dark }};
 }
 
 footer p {
     margin: 0;
     font-size: 15px;
-    font-color: #999999;
+    color: #999999;
 }
 
 ::-moz-selection {
